result/0526-103347/stderr.log
In file included from /home/runner/work/pgi-2025-the_luminous_oceans/pgi-2025-the_luminous_oceans/src/utils.c:3:
/home/runner/work/pgi-2025-the_luminous_oceans/pgi-2025-the_luminous_oceans/src/utils.h: In function ‘get_pixel’:
/home/runner/work/pgi-2025-the_luminous_oceans/pgi-2025-the_luminous_oceans/src/utils.h:22:16: error: ‘NULL’ undeclared (first use in this function)
   22 |         return NULL;
      |                ^~~~
/home/runner/work/pgi-2025-the_luminous_oceans/pgi-2025-the_luminous_oceans/src/utils.h:1:1: note: ‘NULL’ is defined in header ‘<stddef.h>’; did you forget to ‘#include <stddef.h>’?
  +++ |+#include <stddef.h>
    1 | #ifndef UTILS_H
/home/runner/work/pgi-2025-the_luminous_oceans/pgi-2025-the_luminous_oceans/src/utils.h:22:16: note: each undeclared identifier is reported only once for each function it appears in
   22 |         return NULL;
      |                ^~~~
gmake[2]: *** [CMakeFiles/freud.dir/build.make:121: CMakeFiles/freud.dir/src/utils.c.o] Error 1
gmake[2]: *** Waiting for unfinished jobs....
/home/runner/work/pgi-2025-the_luminous_oceans/pgi-2025-the_luminous_oceans/src/main.c: In function ‘main’:
/home/runner/work/pgi-2025-the_luminous_oceans/pgi-2025-the_luminous_oceans/src/main.c:36:5: warning: implicit declaration of function ‘dimension’ [-Wimplicit-function-declaration]
   36 |     dimension(configuration.filenames[0]);
      |     ^~~~~~~~~
gmake[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/freud.dir/all] Error 2
gmake: *** [Makefile:136: all] Error 2

The process '/usr/local/bin/cmake' failed with exit code 2